--- a/source/static/style.css
+++ b/source/static/style.css
@@ -30,17 +30,17 @@ body {
 }
 
 .user-message {
-  background-color:#272a2b;
   color: #fff;
-  font-size: 20px;
- 
+  font-size: 16px;
+  display: flex;
+
 }
 
 .bot-message {
-  background-color: #484848;
   color: white;
-  font-size: 20px;
- 
+  font-size: 16px;
+  display: flex;
+
 }
 
 .message-text pre code {
@@ -50,7 +50,7 @@ body {
 
 .user-icon {
   font-size: 20px;
-  margin-right: 10px;  
+  margin-right: 10px;
   border-radius: 50%;
   width: 50px;
   height: 50px;
