--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container chat-box mt-3" style="height: 60vh; overflow: auto;">
 
+<div class="container chat-box mt-3" style="height: 60vh; overflow: auto;">
   {% if messages %}
   {% for i in range(n) %}
   {% if messages[i]['role'] == 'user' %}
@@ -29,9 +29,8 @@
 </div>
 <div class="container form-group mt-5" style="position: fixed; bottom: 5%;">
   <form action="/" method="post" style="text-align: center;">
-    <textarea class="form-control my-4" rows="3" placeholder="Type your message here" id="query"
-      name="query"></textarea>
-    <input class="btn btn-dark" type="submit" value="Submit" id="send-btn" name="send-btn" />
+    <textarea class="form-control my-4" rows="3" placeholder="Type your message here" id="query" name="query"></textarea>
+    <input class="btn btn-dark" type="submit" value="Submit" id="send-btn" name="send-btn">
   </form>
 </div>
 
