--- a/source/templates/base.html
+++ b/source/templates/base.html
@@ -17,18 +17,29 @@
 
 <body>
 	<nav class="navbar navbar-expand-md bg-dark-subtle" data-bs-theme="dark">
-		<div class="container-fluid">
+		<div class="container-fluid .container-fluid">
 			<a class="navbar-brand text-primary-emphasis fw-bold lh-lg" href="{{url_for('index')}}">CHATBOT</a>
 			<div class="collapse navbar-collapse" id="navbarColor01">
 				<ul class="navbar-nav me-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="{{url_for('index')}}" id="index">ChatCompletion</a>
+						<a class="nav-link" href="{{url_for('chatcompletion')}}" id="chatcompletion">ChatCompletion</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{url_for('api')}}" id="api">API</a>
 					</li>
 				</ul>
 			</div>
+		</div>
+		<div class="form-group d-flex me-sm-3 my-sm-2">
+			<div class="form-floating me-sm-3">
+				<input type="email" class="form-control" id="email">
+				<label for="email">Email address</label>
+			</div>
+			<div class="form-floating me-sm-3">
+				<input type="password" class="form-control" id="password">
+				<label for="password">Password</label>
+			</div>
+			<button class="btn btn-primary me-sm-3" type="submit">Start</button>
 		</div>
 	</nav>
 	<div class="container mt-5">
